# portfolio2024

./: README.md
luacpp/: CMakeLists.txt  README.md  grammar.txt
luacpp/src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
luamusgen/: CMakeLists.txt  README.md  test_main.cpp
luamusgen/lua/: .test_project.lua.timestamps  common.lua  luamusgen.lua  luamusgen_ffi.lua  luamusgen_old.lua  luamusgen_old2.lua  luamusgen_plugin.lua  test_flnoacc3.lua  test_melodies.lua  test_poly3accsm.lua  test_project.lua
luamusgen/src/: main.cpp
luamusgen/src/buffer/: Buffer.cpp  Buffer.h
luamusgen/src/parameters/: ParData.h  ParDataArray.h  ParDataConst.h  ParDataView.h  ParDeduce.hpp  ParGenerator.h  Parameter.cpp  Parameter.h
luamusgen/src/parameters/kinds/: ParAdd.cpp  ParAdd.h  ParConcat.cpp  ParConcat.h  ParConst.cpp  ParConst.h  ParConstAt.cpp  ParConstAt.h  ParDiv.cpp  ParDiv.h  ParExp.cpp  ParExp.h  ParLerp.cpp  ParLerp.h  ParLimit.cpp  ParLimit.h  ParLinearExp.cpp  ParLinearExp.h  ParMul.cpp  ParMul.h  ParOscillator.h  ParOscillatorShaped.h  ParRepeat.cpp  ParRepeat.h  ParSub.cpp  ParSub.h  ParTanh.cpp  ParTanh.h  ParToArray.cpp  ParToArray.h  ParVibrato.h  ParVibratoShaped.h
luamusgen/src/processgraph/: ProcessGraph.cpp  ProcessGraph.h  ProcessNode.cpp  ProcessNode.h
luamusgen/src/processgraph/kinds/: BufferNode.cpp  BufferNode.h  DummyNode.cpp  DummyNode.h  ParameterNode.cpp  (+3 more)
luamusgen/src/scriptloader/: ExecutionManager.cpp  ExecutionManager.h  SharedLuaVariables.cpp  SharedLuaVariables.h  lua_segment_processing.cpp  lua_segment_processing.h  lua_segment_register.cpp  lua_segment_register.h
luamusgen/src/transforms/: Transform.cpp  Transform.h
luamusgen/src/util/: ButterworthFilters.hpp  ClassUtil.h  ExpandableCircularQueue.h  Logger.cpp  Logger.h  MathUtil.cpp  MathUtil.h  MoogFilters.hpp  Oscillators.hpp  RandomWrapper.hpp  ThreadLocalRandom.cpp  ThreadLocalRandom.h  TimeUtil.h  WAV_File.cpp  WAV_File.h
luamusgen/test/: test_basic_graph.hpp  test_basic_par.hpp  test_blp.hpp  test_linexp.hpp  test_pars.h
midica/: MidiCA.jucer  MidiCA.vst3  README.md
midica/Source/: CAMIDIGenerator.cpp  CAMIDIGenerator.h  ElementaryCA.cpp  ElementaryCA.h  Globals.cpp  Globals.h  NotePattern.cpp  NotePattern.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
minesweeperai/: CMakeLists.txt  README.md
minesweeperai/include/SFML/Graphics/: Font.hpp
minesweeperai/include/SFML/Window/: Clipboard.hpp
minesweeperai/src/: Core.cpp  Core.h  GameInstance.cpp  GameInstance.h  MinesweeperCell.h  MinesweeperConfig.h  TimeUtil.h  WindowManager.cpp  WindowManager.h  main.cpp
minesweeperai/src/menu/: MenuButton.cpp  MenuButton.h  MenuEnumChoice.cpp  MenuEnumChoice.h  MenuIntInput.cpp  MenuIntInput.h  MenuItem.cpp  MenuItem.h  MenuList.cpp  MenuList.h
minesweeperai/src/solvers/: CellGroups.h  CellGroupsSolver.cpp  CellGroupsSolver.h  DumbCellGroupsSolver.cpp  DumbCellGroupsSolver.h  ObviousMovesSolver.cpp  ObviousMovesSolver.h  Solver.cpp  Solver.h
nebulabrotgen/: CMakeLists.txt  README.md  buddhabrotrenderer.hpp  libnebulabrotgen.cpp  libnebulabrotgen.hpp  main.cpp  stb_image_write.h
(+64 files in other folders)
